<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Admin_HoaDon_Activity">

    <android.support.design.widget.AppBarLayout
        android:background="@color/purple1"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"

            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Đơn hàng">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_ChoXacNhan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_x_c_nh_n" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_ChoLayHang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ch_l_y_h_ng" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_DangGiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ang_giao" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_DaGiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giao" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_KhachHuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kh_ch_h_y" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_AdminHuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_h_y" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />


</android.support.design.widget.CoordinatorLayout>