<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Checkout_activity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ba_cai_dong_ho"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar

                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/checkout" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margintop_cardview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lv_checkout"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/t_ng_tien"
                        android:textColor="@color/LightBlue"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/money"
                        android:textColor="@color/white"
                        android:textSize="30sp" />


                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayout_name_order"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/drw_edt_bg">

                    <EditText
                        android:id="@+id/name_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_account_circle_black_24dp"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:hint="@string/t_n_ng_i_nh_n"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayout_sdt_order"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/drw_edt_bg">

                    <EditText
                        android:id="@+id/sdt_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_phone_blue_24dp"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:hint="@string/s_i_n_tho_i_ng_i_nh_n"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayout_address_order"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/drw_edt_bg">

                    <EditText
                        android:enabled="false"
                        android:id="@+id/address_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_home_blue_24dp"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:hint="@string/a_ch_giao_h_ng"
                        android:inputType="textEmailAddress"
                        android:maxLines="3"
                        android:singleLine="true"
                        android:textColor="@color/white" />

                </android.support.design.widget.TextInputLayout>
                <android.support.v7.widget.CardView
                    android:id="@+id/mapbox_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/black_cardview_nitewatch"
                    app:cardCornerRadius="20dp" >

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/search_location_button_mapbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="@dimen/fab_margin"
                        android:visibility="visible"
                        app:backgroundTint="@color/LightBlue"
                        app:srcCompat="@drawable/ic_search_black_24dp" />
                </android.support.v7.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lv_checkout"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/tienvanchuyen"
                        android:textColor="@color/LightBlue"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_tienship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-light"
                        android:textColor="@color/white"
                        android:textSize="30sp" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/danh_s_ch_s_n_ph_m"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/lv_checkout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layout_info"
                android:layout_marginBottom="@dimen/margin_listview_bottom"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"

                card_view:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_checkout_item" />


        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_listview_bottom"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp">



        <ImageView
            android:id="@+id/btnPaynow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/drw_edt_bg_yellow"
            android:clickable="false"
            android:padding="10dp"
            android:src="@drawable/ic_paypal" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</android.support.design.widget.CoordinatorLayout>